# rift-client-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
src/: client.rs  config.rs  connection.rs  error.rs  events.rs  frame_builder.rs  heartbeat.rs  lib.rs  subscriber.rs
